exports[`no-object-methods-with-collections > invalid(1): Object.keys(new Map()) 1`] = `

  1 | Object.keys(new Map())

`;

exports[`no-object-methods-with-collections > invalid(1): Object.keys(new Map()) 2`] = `

Message:
> 1 | Object.keys(new Map())
    |        ^^^^ \`Object.keys()\` does not return Map contents.

Suggestion 1/1: Use \`Array.from(new Map().keys())\`.:
  1 | Array.from(new Map().keys())

`;

exports[`no-object-methods-with-collections > invalid(10): Object.values((new Set())) 1`] = `

  1 | Object.values((new Set()))

`;

exports[`no-object-methods-with-collections > invalid(10): Object.values((new Set())) 2`] = `

Message:
> 1 | Object.values((new Set()))
    |        ^^^^^^ \`Object.values()\` does not return Set contents.

Suggestion 1/1: Use \`Array.from((new Set()).values())\`.:
  1 | Array.from((new Set()).values())

`;

exports[`no-object-methods-with-collections > invalid(11): function foo(map: Map<string, number>) { return Object.keys(map); } 1`] = `

  1 | function foo(map: Map<string, number>) { return Object.keys(map); }

`;

exports[`no-object-methods-with-collections > invalid(11): function foo(map: Map<string, number>) { return Object.keys(map); } 2`] = `

Message:
> 1 | function foo(map: Map<string, number>) { return Object.keys(map); }
    |                                                        ^^^^ \`Object.keys()\` does not return Map contents.

Suggestion 1/1: Use \`Array.from(map.keys())\`.:
  1 | function foo(map: Map<string, number>) { return Array.from(map.keys()); }

`;

exports[`no-object-methods-with-collections > invalid(12): function foo(map: ReadonlyMap<string, number>) { return Object.values(map); } 1`] = `

  1 | function foo(map: ReadonlyMap<string, number>) { return Object.values(map); }

`;

exports[`no-object-methods-with-collections > invalid(12): function foo(map: ReadonlyMap<string, number>) { return Object.values(map); } 2`] = `

Message:
> 1 | function foo(map: ReadonlyMap<string, number>) { return Object.values(map); }
    |                                                                ^^^^^^ \`Object.values()\` does not return Map contents.

Suggestion 1/1: Use \`Array.from(map.values())\`.:
  1 | function foo(map: ReadonlyMap<string, number>) { return Array.from(map.values()); }

`;

exports[`no-object-methods-with-collections > invalid(13): function foo(set: Set<string>) { return Object.entries(set); } 1`] = `

  1 | function foo(set: Set<string>) { return Object.entries(set); }

`;

exports[`no-object-methods-with-collections > invalid(13): function foo(set: Set<string>) { return Object.entries(set); } 2`] = `

Message:
> 1 | function foo(set: Set<string>) { return Object.entries(set); }
    |                                                ^^^^^^^ \`Object.entries()\` does not return Set contents.

Suggestion 1/1: Use \`Array.from(set.entries())\`.:
  1 | function foo(set: Set<string>) { return Array.from(set.entries()); }

`;

exports[`no-object-methods-with-collections > invalid(14): function foo(set: ReadonlySet<string>) { return Object.keys(set); } 1`] = `

  1 | function foo(set: ReadonlySet<string>) { return Object.keys(set); }

`;

exports[`no-object-methods-with-collections > invalid(14): function foo(set: ReadonlySet<string>) { return Object.keys(set); } 2`] = `

Message:
> 1 | function foo(set: ReadonlySet<string>) { return Object.keys(set); }
    |                                                        ^^^^ \`Object.keys()\` does not return Set contents.

Suggestion 1/1: Use \`Array.from(set.keys())\`.:
  1 | function foo(set: ReadonlySet<string>) { return Array.from(set.keys()); }

`;

exports[`no-object-methods-with-collections > invalid(15): Object.entries(value as Map<string, number>); 1`] = `

  1 | Object.entries(value as Map<string, number>);

`;

exports[`no-object-methods-with-collections > invalid(15): Object.entries(value as Map<string, number>); 2`] = `

Message:
> 1 | Object.entries(value as Map<string, number>);
    |        ^^^^^^^ \`Object.entries()\` does not return Map contents.

Suggestion 1/1: Use \`Array.from((value as Map<string, number>).entries())\`.:
  1 | Array.from((value as Map<string, number>).entries());

`;

exports[`no-object-methods-with-collections > invalid(16): Object.values(value satisfies Set<string>); 1`] = `

  1 | Object.values(value satisfies Set<string>);

`;

exports[`no-object-methods-with-collections > invalid(16): Object.values(value satisfies Set<string>); 2`] = `

Message:
> 1 | Object.values(value satisfies Set<string>);
    |        ^^^^^^ \`Object.values()\` does not return Set contents.

Suggestion 1/1: Use \`Array.from((value satisfies Set<string>).values())\`.:
  1 | Array.from((value satisfies Set<string>).values());

`;

exports[`no-object-methods-with-collections > invalid(17): const map = value as Map<string, number>; Object.entries(map); 1`] = `

  1 | const map = value as Map<string, number>; Object.entries(map);

`;

exports[`no-object-methods-with-collections > invalid(17): const map = value as Map<string, number>; Object.entries(map); 2`] = `

Message:
> 1 | const map = value as Map<string, number>; Object.entries(map);
    |                                                  ^^^^^^^ \`Object.entries()\` does not return Map contents.

Suggestion 1/1: Use \`Array.from(map.entries())\`.:
  1 | const map = value as Map<string, number>; Array.from(map.entries());

`;

exports[`no-object-methods-with-collections > invalid(18): const set = value satisfies Set<string>; Object.values(set); 1`] = `

  1 | const set = value satisfies Set<string>; Object.values(set);

`;

exports[`no-object-methods-with-collections > invalid(18): const set = value satisfies Set<string>; Object.values(set); 2`] = `

Message:
> 1 | const set = value satisfies Set<string>; Object.values(set);
    |                                                 ^^^^^^ \`Object.values()\` does not return Set contents.

Suggestion 1/1: Use \`Array.from(set.values())\`.:
  1 | const set = value satisfies Set<string>; Array.from(set.values());

`;

exports[`no-object-methods-with-collections > invalid(19): const map = <Map<string, number>>value; Object.keys(map); 1`] = `

  1 | const map = <Map<string, number>>value; Object.keys(map);

`;

exports[`no-object-methods-with-collections > invalid(19): const map = <Map<string, number>>value; Object.keys(map); 2`] = `

Message:
> 1 | const map = <Map<string, number>>value; Object.keys(map);
    |                                                ^^^^ \`Object.keys()\` does not return Map contents.

Suggestion 1/1: Use \`Array.from(map.keys())\`.:
  1 | const map = <Map<string, number>>value; Array.from(map.keys());

`;

exports[`no-object-methods-with-collections > invalid(2): Object.values(new Map()) 1`] = `

  1 | Object.values(new Map())

`;

exports[`no-object-methods-with-collections > invalid(2): Object.values(new Map()) 2`] = `

Message:
> 1 | Object.values(new Map())
    |        ^^^^^^ \`Object.values()\` does not return Map contents.

Suggestion 1/1: Use \`Array.from(new Map().values())\`.:
  1 | Array.from(new Map().values())

`;

exports[`no-object-methods-with-collections > invalid(20): const map = value as Map<string, number>; Object.keys(map!); 1`] = `

  1 | const map = value as Map<string, number>; Object.keys(map!);

`;

exports[`no-object-methods-with-collections > invalid(20): const map = value as Map<string, number>; Object.keys(map!); 2`] = `

Message:
> 1 | const map = value as Map<string, number>; Object.keys(map!);
    |                                                  ^^^^ \`Object.keys()\` does not return Map contents.

Suggestion 1/1: Use \`Array.from(map!.keys())\`.:
  1 | const map = value as Map<string, number>; Array.from(map!.keys());

`;

exports[`no-object-methods-with-collections > invalid(21): type Items = Map<string, number>; declare const items: Items; Object.keys(items); 1`] = `

Filename: file.ts

  1 | type Items = Map<string, number>; declare const items: Items; Object.keys(items);

`;

exports[`no-object-methods-with-collections > invalid(21): type Items = Map<string, number>; declare const items: Items; Object.keys(items); 2`] = `

Message:
> 1 | type Items = Map<string, number>; declare const items: Items; Object.keys(items);
    |                                                                      ^^^^ \`Object.keys()\` does not return Map contents.

Suggestion 1/1: Use \`Array.from(items.keys())\`.:
  1 | type Items = Map<string, number>; declare const items: Items; Array.from(items.keys());

`;

exports[`no-object-methods-with-collections > invalid(22): type Items = ReadonlySet<string>; declare const items: Items; Object.values(items); 1`] = `

Filename: file.ts

  1 | type Items = ReadonlySet<string>; declare const items: Items; Object.values(items);

`;

exports[`no-object-methods-with-collections > invalid(22): type Items = ReadonlySet<string>; declare const items: Items; Object.values(items); 2`] = `

Message:
> 1 | type Items = ReadonlySet<string>; declare const items: Items; Object.values(items);
    |                                                                      ^^^^^^ \`Object.values()\` does not return Set contents.

Suggestion 1/1: Use \`Array.from(items.values())\`.:
  1 | type Items = ReadonlySet<string>; declare const items: Items; Array.from(items.values());

`;

exports[`no-object-methods-with-collections > invalid(23): type Items = Map<string, number> | ReadonlyMap<string, number>; declare const items: Items; Object.entries(items); 1`] = `

Filename: file.ts

  1 | type Items = Map<string, number> | ReadonlyMap<string, number>; declare const items: Items; Object.entries(items);

`;

exports[`no-object-methods-with-collections > invalid(23): type Items = Map<string, number> | ReadonlyMap<string, number>; declare const items: Items; Object.entries(items); 2`] = `

Message:
> 1 | type Items = Map<string, number> | ReadonlyMap<string, number>; declare const items: Items; Object.entries(items);
    |                                                                                                    ^^^^^^^ \`Object.entries()\` does not return Map contents.

Suggestion 1/1: Use \`Array.from(items.entries())\`.:
  1 | type Items = Map<string, number> | ReadonlyMap<string, number>; declare const items: Items; Array.from(items.entries());

`;

exports[`no-object-methods-with-collections > invalid(24): Object.keys(/* keep */ new Map()) 1`] = `

  1 | Object.keys(/* keep */ new Map())

`;

exports[`no-object-methods-with-collections > invalid(24): Object.keys(/* keep */ new Map()) 2`] = `

Message:
> 1 | Object.keys(/* keep */ new Map())
    |        ^^^^ \`Object.keys()\` does not return Map contents.

`;

exports[`no-object-methods-with-collections > invalid(25): Object.values((value as Set<string>)); 1`] = `

  1 | Object.values((value as Set<string>));

`;

exports[`no-object-methods-with-collections > invalid(25): Object.values((value as Set<string>)); 2`] = `

Message:
> 1 | Object.values((value as Set<string>));
    |        ^^^^^^ \`Object.values()\` does not return Set contents.

Suggestion 1/1: Use \`Array.from((value as Set<string>).values())\`.:
  1 | Array.from((value as Set<string>).values());

`;

exports[`no-object-methods-with-collections > invalid(3): Object.entries(new Map()) 1`] = `

  1 | Object.entries(new Map())

`;

exports[`no-object-methods-with-collections > invalid(3): Object.entries(new Map()) 2`] = `

Message:
> 1 | Object.entries(new Map())
    |        ^^^^^^^ \`Object.entries()\` does not return Map contents.

Suggestion 1/1: Use \`Array.from(new Map().entries())\`.:
  1 | Array.from(new Map().entries())

`;

exports[`no-object-methods-with-collections > invalid(4): Object.keys(new Set()) 1`] = `

  1 | Object.keys(new Set())

`;

exports[`no-object-methods-with-collections > invalid(4): Object.keys(new Set()) 2`] = `

Message:
> 1 | Object.keys(new Set())
    |        ^^^^ \`Object.keys()\` does not return Set contents.

Suggestion 1/1: Use \`Array.from(new Set().keys())\`.:
  1 | Array.from(new Set().keys())

`;

exports[`no-object-methods-with-collections > invalid(5): Object.values(new Set()) 1`] = `

  1 | Object.values(new Set())

`;

exports[`no-object-methods-with-collections > invalid(5): Object.values(new Set()) 2`] = `

Message:
> 1 | Object.values(new Set())
    |        ^^^^^^ \`Object.values()\` does not return Set contents.

Suggestion 1/1: Use \`Array.from(new Set().values())\`.:
  1 | Array.from(new Set().values())

`;

exports[`no-object-methods-with-collections > invalid(6): Object.entries(new Set()) 1`] = `

  1 | Object.entries(new Set())

`;

exports[`no-object-methods-with-collections > invalid(6): Object.entries(new Set()) 2`] = `

Message:
> 1 | Object.entries(new Set())
    |        ^^^^^^^ \`Object.entries()\` does not return Set contents.

Suggestion 1/1: Use \`Array.from(new Set().entries())\`.:
  1 | Array.from(new Set().entries())

`;

exports[`no-object-methods-with-collections > invalid(7): const map = new Map(); Object.keys(map); 1`] = `

  1 | const map = new Map(); Object.keys(map);

`;

exports[`no-object-methods-with-collections > invalid(7): const map = new Map(); Object.keys(map); 2`] = `

Message:
> 1 | const map = new Map(); Object.keys(map);
    |                               ^^^^ \`Object.keys()\` does not return Map contents.

Suggestion 1/1: Use \`Array.from(map.keys())\`.:
  1 | const map = new Map(); Array.from(map.keys());

`;

exports[`no-object-methods-with-collections > invalid(8): const set = new Set(); Object.values(set); 1`] = `

  1 | const set = new Set(); Object.values(set);

`;

exports[`no-object-methods-with-collections > invalid(8): const set = new Set(); Object.values(set); 2`] = `

Message:
> 1 | const set = new Set(); Object.values(set);
    |                               ^^^^^^ \`Object.values()\` does not return Set contents.

Suggestion 1/1: Use \`Array.from(set.values())\`.:
  1 | const set = new Set(); Array.from(set.values());

`;

exports[`no-object-methods-with-collections > invalid(9): Object.keys((new Map())) 1`] = `

  1 | Object.keys((new Map()))

`;

exports[`no-object-methods-with-collections > invalid(9): Object.keys((new Map())) 2`] = `

Message:
> 1 | Object.keys((new Map()))
    |        ^^^^ \`Object.keys()\` does not return Map contents.

Suggestion 1/1: Use \`Array.from((new Map()).keys())\`.:
  1 | Array.from((new Map()).keys())

`;
